--- a/srcs/visu/Makefile
+++ b/srcs/visu/Makefile
@@ -5,24 +5,24 @@
 #                                                     +:+ +:+         +:+      #
 #    By: yquaro <yquaro@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2020/01/23 18:40:59 by yquaro            #+#    #+#              #
-#    Updated: 2020/01/23 19:14:54 by yquaro           ###   ########.fr        #
+#    Created: 2020/01/23 19:01:16 by yquaro            #+#    #+#              #
+#    Updated: 2020/01/23 19:14:35 by yquaro           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-include ../incs/corewar.mk
+include ../../incs/corewar.mk
 
-CFLAGS = -g -Wall -Wextra -Werror
-COMPILING = $(CC) $(CFLAGS) -lncurses $(HEADER_H)
+HEADER_H = -I ../../incs/
 
-all:
-	@mv ../libft/$(LIBNAME) $(LIBNAME)
-	$(COMPILING) *.o $(LIBNAME) -o $(EXECUTABLE)
-	@mv $(EXECUTABLE) ../$(EXECUTABLE)
-	@echo \*\*\* COREWAR COMPILED!
+DIR_O = ../../.objs
+SOURCES = init_visu.c
 
-clean:
-	@rm -f *.o
+OBJECTS = $(addprefix $(DIR_O)/,$(patsubst %.c,%.o,$(SOURCES)))
 
-fclean: clean
-	@rm -f $(LIBNAME)
+all: print $(OBJECTS)
+
+print:
+	@echo \*\*\* Compiling visu files
+
+$(DIR_O)/%.o: %.c
+	$(COMPILING) $< -o $@
