--- a/srcs/vm/Makefile
+++ b/srcs/vm/Makefile
@@ -17,7 +17,7 @@ HEADER_H = -I ../../incs/
 DIR_O = ../../.objs
 SOURCES = battle.c battle_check.c check_args.c corewar.c create_players.c \
 			debug.c init_game.c op_1.c op_2.c op_3.c op_utils.c parse_file.c \
-			parse_operations.c process_func.c additional_func.c check_flags.c
+			parse_operations.c process_func.c additional_func.c check_flags.c op_log.c
 
 OBJECTS = $(addprefix $(DIR_O)/,$(patsubst %.c,%.o,$(SOURCES)))
 
