--- a/srcs/disasm/Makefile
+++ b/srcs/disasm/Makefile
@@ -6,7 +6,7 @@
 #    By: yquaro <yquaro@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/01/31 15:30:59 by yquaro            #+#    #+#              #
-#    Updated: 2020/02/03 18:34:35 by yquaro           ###   ########.fr        #
+#    Updated: 2020/02/04 21:14:02 by yquaro           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,8 @@ include ../../incs/corewar.mk
 HEADER_H = -I ../../incs/
 
 DIR_O = ../../.objs/disasm
-SOURCES = disassemble.c error.c init.c parse_bytecode.c init_file.c 
+SOURCES = disassemble.c error.c init.c parse_bytecode.c init_file.c \
+			convert_player_code.c arg_type.c
 
 OBJECTS = $(addprefix $(DIR_O)/,$(patsubst %.c,%.o,$(SOURCES)))
 
